refactor: bump to 2.0.0-SNAPSHOT, migrate to JDK 17 & wit 3.x & flink 1.20